2004-12-10  Gil Osher  <dolfin@rpg.org.il>

 * configure.in: Added 'he' (Hebrew) to ALL_LINGUAS.

2004-12-09 Bart Hakvoort  <gparted@users.sf.net>

 * src/fat16: use mkdosfs -F16 instead of libparted to create fat16 filesystems 

2004-12-09 Bart Hakvoort  <gparted@users.sf.net>

 * src/ext2.cc,
   src/ext3.cc,
   src/ntfs.cc,
   src/reiserfs.cc: added LANG=C to the commands which read the used space of a filesystem. This prevent errors with some locales.

2004-12-09 Bart Hakvoort  <gparted@users.sf.net>

 * added MIN and MAX to filesystemstruct to set min. and max sizes of a filesystem. So instead of checking per filesystem
   i now simply check the fs.MIN or fs.MAX. this results in less and cleaner code. Also this will come in handy when adding
	  support for new filesystems. (This also fixed several minor bugs with filesystemsizes and gained some improvement in resizer
	  performance)

2004-12-07 Bart Hakvoort  <gparted@users.sf.net>

	* src/VBox_VisualDisk.cc: placed a small (2px) border around the legend.

2004-12-08  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2004-12-07 Bart Hakvoort  <gparted@users.sf.net>

	* README: updated description to reflect current situation.

2004-12-07	Amanpreet Singh Alam <amanpreetalam@yahoo.com>

	*configure.in: pa is aeed ALL_LINGUAS

2004-12-03 Bart Hakvoort  <gparted@users.sf.net>

	* src/fat16.cc,
	  src/fat32.cc: added correct check for availability of 'dosfsck'
	* configure.in: bumped to 0.0.7  YAY! ;)

2004-12-03 Bart Hakvoort  <gparted@users.sf.net>

	* src/GParted_Core.cc: When ( ! deep_scan ) now only one device is scanned (first found one). Shaves off a couple of millisec from startuptime |-)
	* src/Win_GParted.cc: Fixed small bug with removable devices and the devicemenu. Also fixed redundant calling of 2 functions.

2004-12-02 Bart Hakvoort  <gparted@users.sf.net>

	* src/Win_GParted.cc,