@@ -44,7 +44,7 @@ FS reiserfs::get_filesystem_support( )
 	if ( ! system( "which dd 1>/dev/null 2>/dev/null" ) && fs .resize ) 
 		fs .copy = true ;
 	
-	fs .MIN = 40 ;
+	fs .MIN = 32 ;
 	
 	return fs ;
 }
