@@ -1,3 +1,7 @@
+2004-12-09 Bart Hakvoort  <gparted@users.sf.net>
+
+	* Fixed a bunch of issues with min. and max. sizes of filesystems.
+
 2004-12-10  Gil Osher  <dolfin@rpg.org.il>
 
  * configure.in: Added 'he' (Hebrew) to ALL_LINGUAS.
